2007-05-21  Jakub Jelinek  <jakub@redhat.com>

	* malloc/hooks.c (MALLOC_STATE_VERSION): Bump.
	(public_sET_STATe): If ms->version < 3, put all chunks into
	unsorted chunks and clear {fd,bk}_nextsize fields of largebin
	chunks.

	* malloc/malloc.c [MALLOC_DEBUG]: Revert 2007-05-13 changes.
	* malloc/hooks.c: Likewise.
	* malloc/arena.c: Likewise.
	* malloc/malloc.c (do_check_malloc_state): Don't assert
	n_mmaps is not greater than n_mmaps_max.  This removes the need
	for the previous change.

	* malloc/Makefile (CFLAGS-malloc.c): Revert accidental
	2007-05-07 commit.

2007-05-19  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/kernel-features.h (__ASSUME_PRIVATE_FUTEX):
	Define for kernel >= 2.6.22.

2007-05-18  Ulrich Drepper  <drepper@redhat.com>
	* elf/dl-close.c (_dl_close_worker): When removing object from
	global scope, wait for all lookups to finish afterwards.
	* elf/dl-open.c (add_to_global): When global scope array must
	grow, allocate a new one and free old array only after all
	lookups finish.
	* elf/dl-runtime.c (_dl_fixup): Protect using global scope.
	(_dl_lookup_symbol_x): Likewise.
	* elf/dl-support.c: Define _dl_wait_lookup_done.
	* sysdeps/generic/ldsodefs.h (struct rtld_global): Add
	_dl_wait_lookup_done.

	* malloc/malloc.c (do_check_chunk): Correct check for mmaped block
	not overlapping with arena.

	* malloc/mcheck.c (reallochook): If size==0, free the block.

	* rt/tst-shm.c: Use fstat64 instead of fstat.

	* sysdeps/unix/sysv/linux/i386/sync_file_range.S: Fix case where
	__NR_sync_file_range is not defined.

2007-05-17  Ulrich Drepper  <drepper@redhat.com>

	Dummy files to prevent stub versions from being used.
	* sysdeps/x86_64/fpu/k_cosl.c: New file.
	* sysdeps/x86_64/fpu/k_rem_pio2l.c: New file.
	* sysdeps/x86_64/fpu/k_sinl.c: New file.
	* sysdeps/x86_64/fpu/k_tanl.c: New file.

	* version.h (VERSION): Set to 2.6.90.

2007-05-14  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Define to 2.6.